<resources>
    <string name="app_name">hospital1</string>
    <string name="username">E-mail</string>
    <string name="password">password</string>
    <string name="button">login</string>
    <string name="one">New User? signin?</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mukul first app</string>
    <string name="nav_header_subtitle">mukulaggarwal55@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Status">Appointment Status</string>
    <string name="menu_Booked">Booked Appointment</string>
    <string name="menu_Cancel">Cancel Appointment</string>
    <string name="menu_Exit">Exit</string>
    <string name="menu_Contact">Contact Us</string>
    <string name="menu_send">Send</string>
    <string name="Home_header">Apppointment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
