<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Status" />
        <item
            android:id="@+id/nav_booked"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Booked" />
        <item
            android:id="@+id/nav_cancel"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Cancel" />

    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_Contact" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_Exit" />
        </menu>
    </item>

</menu>
